first and second part done

--- a/index.html
+++ b/index.html
@@ -6,10 +6,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Prompt&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- 1st part done -->
+    <section>
+        <div class="first-part">
+            <h1 class="head"> <span class="heading">Skip</span> The Diet <br> Just Eat Healthy <br> With Food Network
+            </h1>
+            <p>A vast number of foods are both healthy and tasty. By filling your plate with fruits, vegetables, quality
+                protein, and other whole foods, you’ll have meals that are colorful, versatile, and good for you.</p>
+            <button class="order-btn" target=" _blank" href="https://www.food.com/"> Order Now</button>
+        </div>
+        <div class="first-part">
+            <img src="images/female/Group 8425.png" alt="">
+        </div>
+    </section>
 
+    <!-- second-part done -->
+    <section class="bg-img">
+        <div class="second-part">
+            <img src="images/female/Person Image.png" alt="">
+        </div>
+        <div class="second-part about-section">
+            <h2>About Healthy Food</h2>
+            <p class="details">Food has been given a very significant place in our lives because it is our primary
+                requirement. It
+                is
+                our basic need because it is the source of mental and physical energy. The food that we eat, not
+                only
+                affects our body and the efficiency of our mind but directly affects our nature and habits. The
+                Knowledge of balanced diet is therefore indispensable to “Good health”.</p>
+            <button class="order-btn" target=" _blank" href="https://www.food.com/">Contact Me</button>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h1 class="title">My Recipies</h1>
+            <p class="recipe-details">A fun way to use chickpeas, convenient and fun for lunch boxes, snacks, <br>
+                appetizers. Shape these
+                chickpeas to your liking and then smother them in breadcrumbs.<br> Kids and adults will love these with
+                their favorite dipping sauce.</p>
+        </div>
+    </section>
+
+
+
+
+    <section class="img-part">
+        <div class="card">
+            <img class="img-style" src="images/food/card1.jpg" alt="">
+            <div class="img-body">
+                <h2>Vegan salad</h2>
+                <p>Looking for vegan salad recipes? As it turns out, not all salads are only filled with vegetables. It
+                    can be hard to find salad recipes without cheese crumbles or dairy in the dressing.</p>
+            </div>
+
+        </div>
+
+        <div class="card">
+            <img class="img-style" src="images/food/card2.png" alt="">
+            <div class="img-body">
+                <h2>Vegan salad</h2>
+                <p>Looking for vegan salad recipes? As it turns out, not all salads are only filled with vegetables. It
+                    can be hard to find salad recipes without cheese crumbles or dairy in the dressing.</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img class="img-style" src="images/food/card3.png" alt="">
+            <div class="img-body">
+                <h2>Hard Rock Music</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, voluptates.</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
