--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
 
         <div class="card">
-            <img class="img-style" src="images/food/card2.png" alt="">
+            <img class="img-style" src="images/food/card4.png" alt="">
             <div class="img-body">
                 <h2>Vegan salad</h2>
                 <p>Looking for vegan salad recipes? As it turns out, not all salads are only filled with vegetables. It
@@ -79,13 +79,22 @@
         </div>
 
         <div class="card">
-            <img class="img-style" src="images/food/card3.png" alt="">
+            <img class="img-style" src="images/food/card5.jpg" alt="">
             <div class="img-body">
-                <h2>Hard Rock Music</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, voluptates.</p>
+                <h2>Yogurt</h2>
+                <p>Store-bought yogurt may be convenient but it can't compare to the mild creaminess of homemade. The
+                    good news is that making yogurt is incredibly easy—as long as you keep your tools clean and don't
+                    jiggle the mixture while it's setting, it's almost foolproof.</p>
             </div>
         </div>
     </section>
+
+    <footer>
+        <div>
+            <h1 class="network"> <span class="heading">Food</span> Network</h1>
+            <p class="phrase">Eat healthy to live healthy.Live healthy to live happy.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
