--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
             </h1>
             <p>A vast number of foods are both healthy and tasty. By filling your plate with fruits, vegetables, quality
                 protein, and other whole foods, you’ll have meals that are colorful, versatile, and good for you.</p>
-            <button class="order-btn" target=" _blank" href="https://www.food.com/"> Order Now</button>
+            <button class="order-btn"><a target=" _blank" href="https://www.food.com/"> Order Now </a></button>
         </div>
         <div class="first-part">
-            <img src="images/female/Group 8425.png" alt="">
+            <img src="images/female/Group 8447.png" alt="">
         </div>
     </section>
 
     <!-- second-part done -->
     <section class="bg-img">
         <div class="second-part">
-            <img src="images/female/Person Image.png" alt="">
+            <img src="images/female/6667872_preview-removebg-preview.png" alt="">
         </div>
         <div class="second-part about-section">
             <h2>About Healthy Food</h2>
@@ -41,53 +41,74 @@
                 only
                 affects our body and the efficiency of our mind but directly affects our nature and habits. The
                 Knowledge of balanced diet is therefore indispensable to “Good health”.</p>
-            <button class="order-btn" target=" _blank" href="https://www.food.com/">Contact Me</button>
+            <button class="order-btn"><a target=" _blank" href="https://www.facebook.com/showrav.das.39545"> Contect Me
+                </a></button>
         </div>
     </section>
+
+
+    <div class="title">
+        <h1>My Recipies</h1>
+        <p>A fun way to use chickpeas, convenient and fun for lunch boxes, snacks, <br>
+            appetizers. Shape these
+            chickpeas to your liking and then smother them in breadcrumbs.<br> Kids and adults will love these with
+            their favorite dipping sauce.</p>
+    </div>
 
     <section>
-        <div>
-            <h1 class="title">My Recipies</h1>
-            <p class="recipe-details">A fun way to use chickpeas, convenient and fun for lunch boxes, snacks, <br>
-                appetizers. Shape these
-                chickpeas to your liking and then smother them in breadcrumbs.<br> Kids and adults will love these with
-                their favorite dipping sauce.</p>
+        <div class="card">
+            <img src="images/food/card1.jpg" alt="">
+
+            <h2>lhjfljdhfjhf</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, praesentium?</p>
         </div>
+
+        <div class="card">
+            <img src="images/food/card4.png" alt="">
+
+            <h2>lhjfljdhfjhf</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, praesentium?</p>
+        </div>
+
+        <div class="card">
+            <img src="images/food/card5.jpg" alt="">
+
+            <h2>lhjfljdhfjhf</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, praesentium?</p>
+        </div>
+
     </section>
 
 
 
 
-    <section class="img-part">
-        <div class="card">
-            <img class="img-style" src="images/food/card1.jpg" alt="">
-            <div class="img-body">
-                <h2>Vegan salad</h2>
-                <p>Looking for vegan salad recipes? As it turns out, not all salads are only filled with vegetables. It
-                    can be hard to find salad recipes without cheese crumbles or dairy in the dressing.</p>
-            </div>
 
-        </div>
+    <div>
+        <h1 class="gallery"> Food Gallery</h1>
+    </div>
 
-        <div class="card">
-            <img class="img-style" src="images/food/card4.png" alt="">
-            <div class="img-body">
-                <h2>Vegan salad</h2>
-                <p>Looking for vegan salad recipes? As it turns out, not all salads are only filled with vegetables. It
-                    can be hard to find salad recipes without cheese crumbles or dairy in the dressing.</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <img class="img-style" src="images/food/card5.jpg" alt="">
-            <div class="img-body">
-                <h2>Yogurt</h2>
-                <p>Store-bought yogurt may be convenient but it can't compare to the mild creaminess of homemade. The
-                    good news is that making yogurt is incredibly easy—as long as you keep your tools clean and don't
-                    jiggle the mixture while it's setting, it's almost foolproof.</p>
-            </div>
-        </div>
+    <section class="food-gallery">
+        <div class="box"><img src="images/gallery/Gallery1.jpg" alt=""></div>
+        <div class="box"><img src="images/gallery/Gallery2.jpg" alt=""></div>
+        <div class="box"><img src="images/gallery/Gallery3.jpg" alt=""></div>
+        <div class="box"><img src="images/gallery/Gallery4.jpg" alt=""></div>
+        <div class="box"><img src="images/gallery/Gallery5.jpg" alt=""></div>
+        <div class="box"><img src="images/gallery/Gallery6.jpg" alt=""></div>
+        <div class="box"><img src="images/gallery/Gallery7.jpg" alt=""></div>
+        <div class="box"><img src="images/gallery/Gallery8.jpg" alt=""></div>
     </section>
+
+    <section class="food-gallery">
+        <div class="box"><img src="images/gallery/Gallery1.jpg" alt=""></div>
+        <div class="box"><img src="images/gallery/Gallery2.jpg" alt=""></div>
+        <div class="box"><img src="images/gallery/Gallery3.jpg" alt=""></div>
+        <div class="box"><img src="images/gallery/Gallery4.jpg" alt=""></div>
+        <div class="box"><img src="images/gallery/Gallery5.jpg" alt=""></div>
+        <div class="box"><img src="images/gallery/Gallery6.jpg" alt=""></div>
+        <div class="box"><img src="images/gallery/Gallery7.jpg" alt=""></div>
+        <div class="box"><img src="images/gallery/Gallery8.jpg" alt=""></div>
+    </section>
+
 
     <footer>
         <div>
