--- a/index.html
+++ b/index.html
@@ -55,26 +55,34 @@
             their favorite dipping sauce.</p>
     </div>
 
+    <!-- card part -->
     <section>
         <div class="card">
             <img src="images/food/card1.jpg" alt="">
 
-            <h2>lhjfljdhfjhf</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, praesentium?</p>
+            <h2>No-Flip French Toast</h2>
+            <p> Heat oven to 425°F. In large cast-iron skillet, combine berries, ginger, cornstarch, and lime zest.
+
+                2. In medium bowl, whisk together eggs, milk, maple syrup, vanilla, cinnamon, and nutmeg. Dip bread
+                slices in egg mixture and arrange in a circle, overlapping, on top of berries.</p>
         </div>
 
         <div class="card">
             <img src="images/food/card4.png" alt="">
 
-            <h2>lhjfljdhfjhf</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, praesentium?</p>
+            <h2>Autumn Soup</h2>
+            <p>As the temps start to drop, it's time to finally head indoors and turn on the stove again. These fall
+                soups come together with ease and make the most of what's in season — pick from pumpkin recipes,
+                flavorful cauliflower dinners and easy butternut squash recipes.</p>
         </div>
 
         <div class="card">
             <img src="images/food/card5.jpg" alt="">
 
-            <h2>lhjfljdhfjhf</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, praesentium?</p>
+            <h2>Mutton Steak</h2>
+            <p>A steak is a meat generally sliced across the muscle fibers, potentially including a bone. ... For some
+                meats, such as pork, lamb and mutton, chevon, and veal, these cuts are often referred to as chops. Some
+                cured meat, such as gammon, is commonly served as steak.</p>
         </div>
 
     </section>
@@ -87,33 +95,38 @@
         <h1 class="gallery"> Food Gallery</h1>
     </div>
 
+    <!-- bonus part -->
     <section class="food-gallery">
-        <div class="box"><img src="images/gallery/Gallery1.jpg" alt=""></div>
-        <div class="box"><img src="images/gallery/Gallery2.jpg" alt=""></div>
-        <div class="box"><img src="images/gallery/Gallery3.jpg" alt=""></div>
-        <div class="box"><img src="images/gallery/Gallery4.jpg" alt=""></div>
-        <div class="box"><img src="images/gallery/Gallery5.jpg" alt=""></div>
-        <div class="box"><img src="images/gallery/Gallery6.jpg" alt=""></div>
-        <div class="box"><img src="images/gallery/Gallery7.jpg" alt=""></div>
-        <div class="box"><img src="images/gallery/Gallery8.jpg" alt=""></div>
+
+        <div class="gallery-one">
+            <div class="box"><img src="images/gallery/Gallery1.jpg" alt=""></div>
+            <div class="box"><img src="images/gallery/Gallery2.jpg" alt=""></div>
+            <div class="box"><img src="images/gallery/Gallery3.jpg" alt=""></div>
+            <div class="box"><img src="images/gallery/Gallery4.jpg" alt=""></div>
+        </div>
     </section>
 
     <section class="food-gallery">
-        <div class="box"><img src="images/gallery/Gallery1.jpg" alt=""></div>
-        <div class="box"><img src="images/gallery/Gallery2.jpg" alt=""></div>
-        <div class="box"><img src="images/gallery/Gallery3.jpg" alt=""></div>
-        <div class="box"><img src="images/gallery/Gallery4.jpg" alt=""></div>
-        <div class="box"><img src="images/gallery/Gallery5.jpg" alt=""></div>
-        <div class="box"><img src="images/gallery/Gallery6.jpg" alt=""></div>
-        <div class="box"><img src="images/gallery/Gallery7.jpg" alt=""></div>
-        <div class="box"><img src="images/gallery/Gallery8.jpg" alt=""></div>
+        <div class="gallery2">
+            <div class="box1"><img src="images/gallery/Gallery6.jpg" alt=""></div>
+            <div class="box1"><img src="images/gallery/Gallery6.jpg" alt=""></div>
+            <div class="box1"><img src="images/gallery/Gallery8.jpg" alt=""></div>
+            <div class="box1"><img src="images/gallery/Gallery8.jpg" alt=""></div>
+        </div>
     </section>
 
-
+    <!-- footer part -->
     <footer>
         <div>
             <h1 class="network"> <span class="heading">Food</span> Network</h1>
             <p class="phrase">Eat healthy to live healthy.Live healthy to live happy.</p>
+        </div>
+
+        <!-- bonus part -->
+        <div class="form">
+            <h2 class="last-head">Contact</h2>
+            <input class="form-control" type="text" placeholder="Enter Your Email">
+            <button class="submit-btn">Submit</button>
         </div>
     </footer>
 </body>
