--- a/index.html
+++ b/index.html
@@ -87,15 +87,25 @@
 
     </section>
 
+    <!-- bonus part -->
+    <h2 class="free"> Free Shop</h2>
+
+    <div class="shop">
+        <div class="free-shop">
+            <img src="images/gallery/add-img-01.jpg" alt="">
+        </div>
+        <div class="free-shop">
+            <img src="images/gallery/add-img-02.jpg" alt="">
+        </div>
+    </div>
 
 
 
-
+    <!-- bonus part -->
     <div>
         <h1 class="gallery"> Food Gallery</h1>
     </div>
 
-    <!-- bonus part -->
     <section class="food-gallery">
 
         <div class="gallery-one">
@@ -122,7 +132,6 @@
             <p class="phrase">Eat healthy to live healthy.Live healthy to live happy.</p>
         </div>
 
-        <!-- bonus part -->
         <div class="form">
             <h2 class="last-head">Contact</h2>
             <input class="form-control" type="text" placeholder="Enter Your Email">
